--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,30 +1,39 @@
 * {
   font-family: 'Roboto', sans-serif;
+
+}
+.App {
+  position: fixed;
+    top: 0;
+    bottom: 0;
 }
 .two-column-layout {
   display: flex;
-  height: 100vh;
+  width: 100%; 
+  height: 100%;
 }
 
 .left-section {
   flex: 1;
   background-color: #f0f0f0;
   padding: 20px;
+  height: 100%;;
 }
 
 .right-section {
   flex: 1;
   background-color: #e0e0e0;
   padding: 20px;
+  overflow-y: scroll;
+  overflow-x: scroll;
+
+
 }
 
-
-/* ButtonStyles.css */
-
-/* Base styles for the button */
 button {
   display: inline-block;
   padding: 10px 20px;
+  margin-bottom: 10px;
   border: none;
   cursor: pointer;
   font-size: 16px;
@@ -32,20 +41,20 @@ button {
   text-decoration: none;  
   border-radius: 4px;
   transition: background-color 0.3s, color 0.3s;
-  background-color: #333; /* Set the background color */
-  color: #fff; /* Set the text color */
+  background-color: #333;
+  color: #fff;
 }
 
 textarea {
-  /* width: 100%; */
   min-width: 50px; 
   padding: 10px;
-  border: 1px solid #ccc;
+  border: none;
   border-radius: 4px;
   font-size: 20px;
-  background-color: #fff; /* Set the background color to white */
-  color: #333; /* Set the text color to black */
+  background-color: #fff;
+  color: #333;
   font-weight: 200;
+
 }
 
 .left-section {
