--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,39 +1,33 @@
-* {
-  font-family: 'Roboto', sans-serif;
-
-}
 .App {
-  position: fixed;
-    top: 0;
-    bottom: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #e0e0e0;
 }
+
 .two-column-layout {
   display: flex;
-  width: 100%; 
-  height: 100%;
+  width: auto; 
+  height: 19;
+  padding: 10px;
 }
 
 .left-section {
   flex: 1;
-  background-color: #f0f0f0;
   padding: 20px;
-  height: 100%;;
+  height: 100%;
 }
 
 .right-section {
   flex: 1;
-  background-color: #e0e0e0;
-  padding: 20px;
-  overflow-y: scroll;
+  padding: 10px;
   overflow-x: scroll;
-
-
+  height: 100%;
 }
 
 button {
   display: inline-block;
   padding: 10px 20px;
-  margin-bottom: 10px;
+  margin-top: 10px;
   border: none;
   cursor: pointer;
   font-size: 16px;
